--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -35,7 +35,7 @@ home_net:
     mt_lists:
       - LAN
       - NOSEC
-    dhcp_range: 10.0.10.112/28
+    dhcp_range: 10.0.10.240/28
     domain: vm.{{ domains['hb'] }}
   general:
     cidr: 10.0.50.0/24
@@ -68,6 +68,8 @@ internal_net:
     domain: san.{{ domains['hb'] }}
   kube:
     cidr: 172.27.0.0/16
+  talos:
+    cidr: 172.28.0.0/16
 
 wg_net:
   mt:
@@ -103,8 +105,10 @@ subnets:
       - 10.0.10.106/31
     prom:
       - 10.0.10.108/31
-    clients:
+    talos:
       - 10.0.10.112/28
+    clients:
+      - 10.0.10.240/28
   general:
     switches:
       - 10.0.50.0/28
@@ -139,6 +143,15 @@ subnets:
     clients:
       - 10.0.2.64/26
       - 10.0.2.128/25
+  talos:
+    svc:
+      - 172.28.0.0/18
+    pod:
+      - 172.28.64.0/18
+    lb:
+      - 172.28.128.0/26
+    mon:
+      - 172.28.128.64/26
   kube:
     svc:
       - 172.27.0.0/18
@@ -170,6 +183,8 @@ vips:
       - 10.0.10.34
     kube_cp:
       - 10.0.10.35
+    talos_cp:
+      - 10.0.10.36
   general:
     ceph_nfs:
       - 10.0.50.33
@@ -181,6 +196,11 @@ vips:
       - 172.27.128.1
     prom:
       - 172.27.128.2
+  talos:
+    nginx:
+      - 172.28.128.1
+    prom:
+      - 172.28.128.2
 
 vips_with_prefix:
   vm:
@@ -190,6 +210,8 @@ vips_with_prefix:
       - 10.0.10.34/24
     kube_cp:
       - 10.0.10.35/24
+    talos_cp:
+      - 10.0.10.36/24
   general:
     ceph_nfs:
       - 10.0.50.33/24
@@ -201,4 +223,9 @@ vips_with_prefix:
       - 172.27.128.1/16
     prom:
       - 172.27.128.2/16
+  talos:
+    nginx:
+      - 172.28.128.1/16
+    prom:
+      - 172.28.128.2/16
 # END AUTO GENERATED VARIABLES
