--- a/inventory/group_vars/loki/firewall.yml
+++ b/inventory/group_vars/loki/firewall.yml
@@ -17,7 +17,7 @@ firewalld_zones:
     sources: "{{ node_exporter_allow_ips }}"
 
   - name: internal
-    sources: "{{ subnets.kube.mon | ansible.utils.ipv4 }}"
+    sources: "{{ (subnets.kube.mon + subnets.talos.mon) | ansible.utils.ipv4 }}"
 
 firewalld_services:
   - name: cockpit
