--- a/playbooks/libvirt-provision.yml
+++ b/playbooks/libvirt-provision.yml
@@ -2,7 +2,7 @@
 ---
 
 - name: Run common tasks
-  hosts: libvirt,!k8s_cluster
+  hosts: libvirt,!k8s_cluster,!talos
   gather_facts: true
   pre_tasks:
     - name: Include common tasks
