--- a/roles/certbot/handlers/main.yml
+++ b/roles/certbot/handlers/main.yml
@@ -1,17 +1,17 @@
 ---
 
 - name: reload systemd
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
 
 - name: enable and start renew timer
-  systemd:
+  ansible.builtin.systemd:
     name: certbot-renew.timer
     enabled: true
     state: started
 
 - name: enable and start update timer
-  systemd:
+  ansible.builtin.systemd:
     name: certbot-update.timer
     enabled: true
     state: started
