--- a/inventory/host_vars/drepi/postfix.yml
+++ b/inventory/host_vars/drepi/postfix.yml
@@ -73,9 +73,9 @@ postfix_main_config:
   - regexp: "^#?smtpd_use_tls"
     line: "smtpd_use_tls = yes"
   - regexp: "^#?smtpd_tls_cert_file"
-    line: "smtpd_tls_cert_file = /etc/letsencrypt/live/{{ postfix_hostname }}/fullchain.pem"
+    line: "smtpd_tls_cert_file = /etc/lego/certificates/{{ postfix_hostname }}.crt"
   - regexp: "^#?smtpd_tls_key_file"
-    line: "smtpd_tls_key_file = /etc/letsencrypt/live/{{ postfix_hostname }}/privkey.pem"
+    line: "smtpd_tls_key_file = /etc/lego/certificates/{{ postfix_hostname }}.key"
   - regexp: "^#?smtpd_tls_security_level"
     line: "smtpd_tls_security_level = may"
   - regexp: "^#?sender_canonical_classes"
