--- a/inventory/host_vars/webgw01/firewall.yml
+++ b/inventory/host_vars/webgw01/firewall.yml
@@ -20,3 +20,7 @@ __firewall_rules_1:
     protocol: udp
     zone: internal
     source: "{{ hostvars['rb5009'].wireguard_ip }}"
+
+firewalld_rich_rules:
+  - zone: public
+    rich_rule: 'rule service name="dns" accept limit value="30/s"'
