--- a/inventory/group_vars/kvm_hv/grub.yml
+++ b/inventory/group_vars/kvm_hv/grub.yml
@@ -4,4 +4,4 @@ grub_config:
   - regexp: '^GRUB_TIMEOUT'
     line: "GRUB_TIMEOUT=2"
   - regexp: '^GRUB_CMDLINE_LINUX'
-    line: GRUB_CMDLINE_LINUX="crashkernel=auto intel_iommu=on nmi_watchdog=0"
+    line: GRUB_CMDLINE_LINUX="crashkernel=auto intel_iommu=on nmi_watchdog=0{% if intel_gvt_enabled %} i915.enable_gvt=1 i915.enable_guc=0{% endif %}"
