Install docker-buildx on GUI

--- a/inventory/group_vars/gui/arch.yml
+++ b/inventory/group_vars/gui/arch.yml
@@ -27,6 +27,7 @@ base_pacman_packages:
   - btrfs-progs
   - deluge-gtk
   - docker
+  - docker-buildx
   - docker-compose
   - downgrade
   - efibootmgr
