--- a/inventory/group_vars/prom_common/prometheus.yml
+++ b/inventory/group_vars/prom_common/prometheus.yml
@@ -94,33 +94,17 @@ __prom_nextcloud_configs: >-
   {%- endfor -%}
   {{ tmp }}
 
-__prom_blackbox_icmp_targets: >-
+__prom_blackbox_icmp_configs: >-
   {%- set tmp = [] -%}
   {%- for h in groups[__prom_auto_target_group] if hostvars[h].prometheus_blackbox_icmp_targets | default([]) -%}
-  {{- tmp.append(hostvars[h].prometheus_blackbox_icmp_targets) -}}
+  {{- tmp.append(
+    {
+      "targets": hostvars[h].prometheus_blackbox_icmp_targets,
+      "labels": hostvars[h].prometheus_node_labels,
+    }
+  ) -}}
   {%- endfor -%}
-  {{ tmp | flatten | unique | sort }}
-
-__prom_blackbox_http_targets: >-
-  {%- set tmp = [] -%}
-  {%- for h in groups[__prom_auto_target_group] if hostvars[h].prometheus_blackbox_http_targets | default([]) -%}
-  {{- tmp.append(hostvars[h].prometheus_blackbox_http_targets) -}}
-  {%- endfor -%}
-  {{ tmp | flatten | unique | sort }}
-
-__prom_blackbox_tls_targets: >-
-  {%- set tmp = [] -%}
-  {%- for h in groups[__prom_auto_target_group] if hostvars[h].prometheus_blackbox_tls_targets | default([]) -%}
-  {{- tmp.append(hostvars[h].prometheus_blackbox_tls_targets) -}}
-  {%- endfor -%}
-  {{ tmp | flatten | unique | sort }}
-
-__prom_blackbox_starttls_targets: >-
-  {%- set tmp = [] -%}
-  {%- for h in groups[__prom_auto_target_group] if hostvars[h].prometheus_blackbox_starttls_targets | default([]) -%}
-  {{- tmp.append(hostvars[h].prometheus_blackbox_starttls_targets) -}}
-  {%- endfor -%}
-  {{ tmp | flatten | unique | sort }}
+  {{ tmp }}
 
 prometheus_scrape_configs: "{{ (__common_prometheus_scrape_configs | default([])) + (__extra_prometheus_scrape_configs | default([])) }}"
 
@@ -136,17 +120,14 @@ __common_prometheus_scrape_configs:
     metrics_path: '/probe'
     params:
       module: [icmp_ipv4]
-    static_configs:
-      - targets: "{{ __prom_blackbox_icmp_targets }}"
+    static_configs: "{{ __prom_blackbox_icmp_configs }}"
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
       - source_labels: [__param_target]
-        target_label: instance
+        target_label: __host_ip
       - target_label: __address__
         replacement: "localhost:{{ blackbox_exporter_port }}"
-      - source_labels: [instance]
-        target_label: __host_ip
 
   - job_name: "node"
     static_configs: "{{ __prom_node_configs }}"
