Add ignore_down prom label

--- a/inventory/group_vars/all/vars.yml
+++ b/inventory/group_vars/all/vars.yml
@@ -36,8 +36,14 @@ localgw_dns_name: "localgw.{{ domains['hb'] }}"
 
 prometheus_blackbox_icmp_targets: ["{{ wireguard_ip | default(ansible_host) }}"]
 prometheus_node_targets: ["{{ wireguard_ip | default(ansible_host) + ':' + node_exporter_port | string }}"]
-prometheus_node_labels:
-  instance: "{{ inventory_hostname }}"
+prometheus_node_labels: >-
+  {%- set tmp = {
+    "instance": inventory_hostname,
+  } -%}
+  {%- if prometheus_ignore_down | default(false) -%}
+  {{- tmp.update({"ignore_down": "true"}) -}}
+  {%- endif -%}
+  {{ tmp }}
 
 # Using "unmanaged" instead
 wireguard_managed_peers: []
