--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -33,3 +33,6 @@ intel_gvt_pci: "0000:00:02.0"
 intel_gvt_vgpus:
   - name: talos
     type: i915-GVTg_V5_4
+
+# Remove once all hosts are expected to be up all the time
+prometheus_ignore_down: true
