--- a/inventory/group_vars/localgw/vars.yml
+++ b/inventory/group_vars/localgw/vars.yml
@@ -2,5 +2,6 @@
 
 nginx_exporter_web_listen_address: "{{ ansible_host }}:{{ nginx_exporter_port }}"
 
+prometheus_ignore_down: true
 # Workaround very bizare bug where wireguard_interface ends up defined as "wg0"
 wireguard_interface: false
