--- a/inventory/group_vars/localgw/libvirt.yml
+++ b/inventory/group_vars/localgw/libvirt.yml
@@ -1,9 +1,9 @@
 ---
 
-vm_cpus: 2
-vm_mem: 2048
+vm_cpus: 1
+vm_mem: 1024
 
-vm_template: "rocky8_packer.raw"
-vm_os_id: "http://rockylinux.org/rocky/8"
+vm_root_size: "10G"
 
-vm_root_size: "20G"
+# Intentionally fail if we have more than available hosts
+vm_host: "{{ vm_host_list[groups['localgw'] | ansible.utils.index_of('eq', inventory_hostname)] }}"
