--- a/inventory/group_vars/localgw/vars.yml
+++ b/inventory/group_vars/localgw/vars.yml
@@ -1,3 +1,6 @@
 ---
 
 nginx_exporter_web_listen_address: "{{ ansible_host }}:{{ nginx_exporter_port }}"
+
+# Workaround very bizare bug where wireguard_interface ends up defined as "wg0"
+wireguard_interface: false
